@@ -20,6 +20,7 @@ reserved variable names are now "pi" and "ans" only (case sensitive)
 shortcut F6 to select all the expression to evaluate
 added cbrt(x) function (cube root)
 added trunc(x) function (truncate), aliasing to int(x)
+added floor(x) and ceil(x) functions
 
 SpeedCrunch 0.7
 ---------------
